--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -364,7 +364,7 @@
                                 <div class="col-md-4 col-sm-12">
                                     <i class="icon-circle-compass black-text"></i>
                                 </div>
-                                <div class="col-md-8 col-sm-12 text-left text-uppercase black-text letter-spacing-1 sm-text-center sm-margin-top-five">Awardee of the Ozyegin University Yearly Merit Based Scholarship 2013 - 2016</div>
+                                <div class="col-md-8 col-sm-12 text-left text-uppercase black-text letter-spacing-1 sm-text-center sm-margin-top-five">Awardee of the Ozyegin University Yearly Merit Scholarship 2013 - 2016</div>
                             </div>
                         </div>
                         <!-- end awards item -->
@@ -377,81 +377,86 @@
 
 
 
-        <section id="portfolio" class="work-4col gutter work-with-title wide wide-title xs-no-padding-bottom">
+        <!-- Portfolio section -->
+        <section id="skillss" class="xs-onepage-section">
             <div class="container">
                 <div class="row">
                     <!-- section title -->
-                    <div class="col-md-12 text-center corporate-slider sm-margin-bottom-seven">
-                        <span class="title-large text-uppercase font-weight-700 black-text letter-spacing-1">Portfolio</span>
+                    <div class="col-md-12 text-center">
+                        <span class="title-number">04</span><h3 class="section-title no-padding">PORTFOLIO</h3>
                     </div>
                     <!-- end section title -->
                 </div>
-            </div>
-            <div class="container-fluid margin-five no-margin-bottom">
-                <div class="row">
-                    <div class="col-md-12 grid-gallery overflow-hidden no-padding">
-                        <div class="tab-content">
-                            <!-- work grid -->
-                            <ul class="grid masonry-items" style="position: relative; height: 657.034px;">
-
-                              <!-- work item -->
-                              <li style="position: absolute; left: 681px; top: 328px;">
-                                  <figure>
-                                      <div class="gallery-img"><a target="_blank" href="https://www.ecitibiz.interior.gov.ng/"><img src='{{ url_for("static", filename="images/hni1.png") }}' alt=""></a></div>
-                                      <figcaption>
-                                          <h3><a target="_blank" href="https://www.ecitibiz.interior.gov.ng/">eCitiBiz</a></h3>
-                                          <p>Online System &amp; Processes</p>
-                                      </figcaption>
-                                  </figure>
-                              </li>
-                              <!-- end work item -->
-
-                                <!-- work item -->
-                                <li style="position: absolute; left: 340px; top: 0px;">
-                                    <figure>
-                                        <div class="gallery-img"><a target="_blank" href="http://tennisnigeria.com/"><img src='{{ url_for("static", filename="images/ntf2.png") }}'alt=""></a></div>
-                                        <figcaption>
-                                            <h3><a target="_blank" href="http://tennisnigeria.com/">Nigeria Tennis Federation</a></h3>
-                                            <p>Web Application and CMS</p>
-                                        </figcaption>
-                                    </figure>
-                                </li>
-                                <!-- end work item -->
-                                <!-- work item -->
-                                <li style="position: absolute; left: 681px; top: 0px;">
-                                    <figure>
-                                        <div class="gallery-img"><a target="_blank" href="http://www.anchordataware.com/"><img src='{{ url_for("static", filename="images/anchor33.png") }}' alt=""></a></div>
-                                        <figcaption>
-                                            <h3><a target="_blank" href="http://www.anchordataware.com/">Anchor Dataware Solutions</a></h3>
-                                            <p>Web Site &amp; Identity</p>
-                                        </figcaption>
-                                    </figure>
-                                </li>
-                                <!-- end work item -->
-
-
-
-
-                                <!-- work item -->
-                                <li style="position: absolute; left: 1022px; top: 328px;">
-                                    <figure>
-                                        <div class="gallery-img"><a href="/"><img src='{{ url_for("static", filename= "images/mysite.png") }}' alt=""></a></div>
-                                        <figcaption>
-                                            <h3><a href="/">My Porfolio</a></h3>
-                                            <p>Web Site &amp; Identity</p>
-                                        </figcaption>
-                                    </figure>
-                                </li>
-                                <!-- end work item -->
-                            </ul>
-                            <!-- end work grid -->
+                <div class="row margin-ten no-margin-bottom">
+                    <!-- features grid -->
+                    <div class="col-md-4 col-sm-12">
+                        <!-- features item -->
+                        <div class="features-section col-md-12 col-sm-6 no-padding">
+                            <div class="col-md-3 col-sm-2 col-xs-2 no-padding"></div>
+                            <div class="col-md-12 col-sm-12 col-xs-12 no-padding text-left f-right">
+                                <h5 class="margin-five no-margin-top">MonsieurMeteo</h5>
+                                <p class="width-90">I am currently working on a research project in developing a weather information system called MonsieurMeteo for farmers in rural Africa. The farmers in rural Africa have little to no access to internet, so they are unable to simply check the internet to get weather information that could greatly impact their productivity. The aim of the project is to therefore discover how reliable weather information can be made instantly available in rural areas in Africa where there is little to no access to internet or smart phones. Therefore, for this project I am making use of technologies like Python, VXML, Django, JSON APIs, Data Analysis and Linked Data. The use of JSON APIs is to get weather forecasts predictions that are reliable and integrate them to the system. While the use of  VXML is to build a voice application that will serve as a medium for the farmers to be able to access the system and get weather information via their simple mobile phones. My idea is to make use of the current technology readily available in rural Africa, and build a solution around it, hence, the integration of a voice application that readily allows farmers get weather information through their simple GSM phones. However, the system will not only provide weather forecasts, it will provide the farmers with tips and advisory information on what farming activities can be carried out in response to the upcoming weather. This requires me to work with data and build a knowledge base that will be integrated with the system to provide more services to the farmer. For this project I’ve carried out a lot of research, and have been able to improve and develop new skills.
+                                </p>
+                            </div>
                         </div>
+                        <!-- end features item -->
+                        <!-- features item -->
+                        <div class="features-section col-md-12 col-sm-6 no-padding no-margin">
+                            <div class="col-md-3 col-sm-2 col-xs-2 no-padding"></div>
+                            <div class="col-md-12 col-sm-12 col-xs-12 no-padding text-left f-right">
+                                <h5 class="margin-five no-margin-top">Garage MS</h5>
+                                <p class="width-90">I worked along with a friend in our free time in developing Garage Management System. The aim of the system was to help car repair shop owners manage the operations of their shop. The system contains various features that are essential in tracking and keeping record of the core activities of an auto repair shop. I worked on designing the system logic, structure, and functionalities. Developed my frontend development skills with this project as I was in charge of building the frontend of the application. <br/><br/><br/></p>
+                            </div>
+                        </div>
+                        <!-- end features item -->
                     </div>
+                    <div class="col-md-4 col-sm-12">
+                        <!-- features item -->
+                        <div class="features-section col-md-12 col-sm-6 no-padding">
+                            <div class="col-md-3 col-sm-2 col-xs-2 no-padding"></div>
+                            <div class="col-md-12 col-sm-12 col-xs-12 no-padding text-left f-right">
+                                <h5 class="margin-five no-margin-top">eCitiBiz</h5>
+                                <p class="width-90">While working at the company Anchor Dataware Solutions, I worked on developing an online and mobile application for the government, to be used by millions of people in Nigeria. The application involved developing an integrated web application, for marriage registrations, citizenship applications, and foreign business registrations/expatriate work permit applications. For this project, I designed all aspects of the system, which involved defining all requirements for the system, designing the system logic, UI, and database structure. eCitiBiz is a robust system that is able to hold: the national marriage records of all marriages in Nigeria, all citizenship application records, and thousands of company records. Each individual and company has an account on the system where they are able to apply for multiple service online. The system integrates a backend interface that provides the agents at the ministry with a platform to work and process all applications online. I made designs of the system from scratch, gathering requirements from the agents at the ministry, understanding the workflow and processes, then transforming them into technical requirements for the system. All processes for around 30 different application types were completely mapped and captured in the system, making it possible for the Ministry agent to be able to carry out all their activities digitally and online. I worked as the project lead in the development of this system and ensured that the system met all functional and logical requirements. I conducted and supervised all necessary tests for the system to weed out errors and ensure the system meets all necessary requirements.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- end features item -->
+                        <!-- features item -->
+                        <div class="features-section col-md-12 col-sm-6 no-padding no-margin">
+                            <div class="col-md-3 col-sm-2 col-xs-2 no-padding"></div>
+                            <div class="col-md-12 col-sm-12 col-xs-12 no-padding text-left f-right">
+                              <h5 class="margin-five no-margin-top">Student Intranet</h5>
+                              <p class="width-90">I worked on developing an intranet to be used by the students at Ozyegin University. The project involved carrying out some research and coming up with a list of functionalities that could be included in a student intranet. A survey was then conducted to select which of the functionalities were highly rated by the students. A complete design for the system was then developed. Which included User Interface designs, Data Flow Diagrams, and database designs. A lot of skills were developed during this project, which included research, data analysis, and design skills.</p>
+                            </div>
+                        </div>
+                        <!-- end features item -->
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                        <!-- features item -->
+                        <div class="features-section col-md-12 col-sm-6 no-padding">
+                            <div class="col-md-3 col-sm-2 col-xs-2 no-padding"></div>
+                            <div class="col-md-12 col-sm-12 col-xs-12 no-padding text-left f-right">
+                                <h5 class="margin-five no-margin-top">Case Tracking System</h5>
+                                <p class="width-90">I designed a Case Tracking System for the Nigerian government agency called PTAD.  The app was developed to help a department of the agency keep a record of all cases that were submitted and needed to be handled. The system involved replicating most of the processes being carried out in the department, while eliminating redundant or ineffective ones. The system automated the way the case handling processes were being carried out, and allowed the department to track the progress of cases from one personnel to another within the department. I worked on designing the system functionalities, architecture and database structure. I managed a small team of three developers and we worked on developing the system to meet the set deadline and requirements. I led a short training that was organized in order to show the agents in the department how to use the system and how they can perform each of their roles with the application. The system is currently hosted internally, and has been able to help the department carry out its duties more efficiently and with more accountability.
+                                <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
+                            </div>
+                        </div>
+                        <!-- end features item -->
+                        <!-- features item -->
+                        <div class="features-section col-md-12 col-sm-6 no-padding no-margin">
+                            <div class="col-md-3 col-sm-2 col-xs-2 no-padding"></div>
+                            <div class="col-md-12 col-sm-12 col-xs-12 no-padding text-left f-right">
+                                <h5 class="margin-five no-margin-top">Websites & Others</h5>
+                                <p class="width-90"> I’ve worked on building various small websites. Most of which were done to help me improve my skills in frontend development and in languages like HTML, CSS, and JavaScript. I’ve developed mini apps using Javascript to develop myself in the use of JSON APIs. I enjoy developing news skills in software development, so I watch tutorials and attend mini online courses that help me build myself further.<br/><br/><br/></p>
+                            </div>
+                        </div>
+                        <!-- end features item -->
+                    </div>
+
                 </div>
             </div>
         </section>
-
-
+        <!-- end skills section -->
 
         <!-- testimonial section -->
         <section class="fix-background" style="background-image:url('static/images/benFocused.jpg');">
